--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Dream Portfolio</title>
+    <title>SRIDDHI MANAGER</title>
     <style>
         :root {
             --bg-dark: #050103;
@@ -182,4 +182,5 @@
     </div>
 
 </body>
+
 </html>
