--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <h2>Let's Connect</h2>
 
   <a href="https://devrakesh.in" class="contact-item">💻 Developer Portfolio</a>
-  <a href="@gmail.com" class="contact-item">💌 yourname@gmail.com</a>
+  <a href="mahalibabli@gmail.com" class="contact-item">💌 MAHALIBABLI@gmail.com</a>
   
 </div>
     </div>
@@ -184,3 +184,4 @@
 </body>
 
 </html>
+
