--- a/projects.html
+++ b/projects.html
@@ -88,19 +88,19 @@
     <div class="projects-container">
 
         <!-- Project 1 -->
-        <a href="https://rakesh15-alt.github.io/NHESproject/" class="project-card" target="_blank">
+        <a href=" https://rakesh15-alt.github.io/portfolio2/" class="project-card" target="_blank">
             <h2>Project One</h2>
             <p>Click to view my first project</p>
         </a>
 
         <!-- Project 2 -->
-        <a href="https://rakesh15-alt.github.io/XCELLFITNESS/V" class="project-card" target="_blank">
+        <a href="https://rakesh15-alt.github.io/portfolio1/" class="project-card" target="_blank">
             <h2>Project Two</h2>
             <p>Click to view my second project</p>
         </a>
 
         <!-- Project 3 -->
-        <a href="https://yourprojectlink3.com" class="project-card" target="_blank">
+        <a href="https://rakesh15-alt.github.io/CAFEPROJECT/" class="project-card" target="_blank">
             <h2>Project Three</h2>
             <p>Click to view my third project</p>
         </a>
@@ -130,3 +130,4 @@ document.querySelectorAll(".hover-sound").forEach(card => {
 
 </body>
 </html>
+
