--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
         </a>
 
         <!-- Project 3 -->
-        <a href="https://rakesh15-alt.github.io/CAFEPROJECT/" class="project-card" target="_blank">
+        <a href="https://rakesh15-alt.github.io/XCELLFITNESS/" class="project-card" target="_blank">
             <h2>Project Three</h2>
             <p>Click to view my third project</p>
         </a>
@@ -130,4 +130,5 @@ document.querySelectorAll(".hover-sound").forEach(card => {
 
 </body>
 </html>
+
 
