--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             position: relative;
         }
 
+        body {
+  cursor: url("cupcakecursor.png"), auto;
+}
+a:hover {
+  cursor: pointer;
+}
+
+button:hover {
+  cursor: url("hover-cupcakecursor.png"), pointer;
+}
+        
+
         /* The glowing background shapes */
         .bg-glow {
             position: fixed;
@@ -184,4 +196,5 @@
 </body>
 
 </html>
+
 
