--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         }
 
         body {
-  cursor: url("cupcakecursor.png"), auto;
+  cursor: url("images/cupcakecursor.png"), auto;
 }
 a:hover {
   cursor: pointer;
 }
 
 button:hover {
-  cursor: url("hover-cupcakecursor.png"), pointer;
+  cursor: url("hover-images/cupcakecursor.png"), pointer;
 }
         
 
@@ -196,5 +196,6 @@ button:hover {
 </body>
 
 </html>
+
 
 
